# world-cup-2026-devhack-ai

./: .env.example  .firebaserc  .gitignore  README.md  index.html  package-lock.json  package.json  skills-lock.json
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  speckit.manifest.json
analyst_service/: .env.example  Dockerfile  README.md  agent.py  cloudbuild.yaml  main.py  pyproject.toml  run_agent.py  run_local.sh
analyst_service/app/: __init__.py  main.py
analyst_service/app/agents/: __init__.py  analyst.py  memory.py  researcher.py  search.py
analyst_service/app/api/: __init__.py  endpoints.py
analyst_service/app/core/: __init__.py
analyst_service/app/schemas/: __init__.py  prediction.py
public/resources/: 16avos.json  4avos.json  8avos.json  matches_group_a.json  matches_group_b.json  matches_group_c.json  matches_group_d.json  matches_group_e.json  matches_group_f.json  matches_group_g.json  matches_group_h.json  matches_group_i.json  matches_group_j.json  matches_group_l.json  semifinals.json  stadiums.json
resources/: 16avos.json  8avos.json  final.json  groups.json  matches_group_a.json  matches_group_b.json  matches_group_c.json  matches_group_d.json  matches_group_e.json  matches_group_f.json  matches_group_g.json  matches_group_i.json  matches_group_j.json  matches_group_k.json  matches_group_l.json  semifinals.json
specs/001-tournament-app-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: README.md  main.js  test_standings.js
(+42 files in other folders)
