[project]
name = "world-cup-analyst-service"
version = "0.1.0"
description = "FIFA World Cup 2026 AI Analyst Microservice"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=2.2.0",
    "google-genai>=2.8.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "pydantic>=2.13.4",
    "typing-extensions>=4.15.0",
    "python-dotenv>=1.2.2",
]
